2011-04-20  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Tony Gentilcore.

        Error event in <script> element shouldn't bubble
        https://bugs.webkit.org/show_bug.cgi?id=51040

        * fast/events/onerror-bubbling-expected.txt:
        * fast/events/onerror-bubbling.html:
        * svg/dom/SVGScriptElement/script-load-and-error-events.svg: error event is dispatched on the
        corresponding SVGScriptElement and shouldn't bubble, so the global error handler should
        never be invoked for script load errors. This behaviour is consistent with HTMLScriptElement element.
        * svg/dom/SVGScriptElement/script-onerror-bubbling-expected.txt: Added.
        * svg/dom/SVGScriptElement/script-onerror-bubbling.svg: Added.

2011-04-20  John Knottenbelt  <jknotten@chromium.org>

        Unreviewed.

        [Chromium] Rebaseline fast/repaint/trailing-floats-root-line-box-overflow fast/canvas/webgl/css-webkit-canvas fast/canvas/webgl/css-webkit-canvas-repaint
        https://bugs.webkit.org/show_bug.cgi?id=58978

	Windows bots are now generating baselines, so include them.
	fast/repaint/trailing-floats-root-line-box-overflow looks like correct output.

        * platform/chromium-mac/fast/repaint/trailing-floats-root-line-box-overflow-expected.png: Added.
        * platform/chromium-win/fast/canvas/webgl/css-webkit-canvas-expected.png: Added.
        * platform/chromium-win/fast/canvas/webgl/css-webkit-canvas-repaint-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2011-04-20  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] REGRESSION(r84296): platform/qt/fast/history/back-to-unreachable-url-then-forward.html fails
        https://bugs.webkit.org/show_bug.cgi?id=58977

        * platform/qt/Skipped: Add platform/qt/fast/history/back-to-unreachable-url-then-forward.html.

2011-04-20  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip failing test on GTK.
