@@ -2,6 +2,16 @@
 
         Reviewed by Tony Gentilcore.
 
+        http/tests/misc/unloadable-script.html fails if <script> error event doesn't bubble
+        https://bugs.webkit.org/show_bug.cgi?id=58981
+
+        * http/tests/misc/unloadable-script.html: canged the test so that it uses <script onerror> instead
+        od <body onerror>
+
+2011-04-20  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Tony Gentilcore.
+
         Error event in <script> element shouldn't bubble
         https://bugs.webkit.org/show_bug.cgi?id=51040
 
